# fuzzyone

./: CMakeLists.txt  Makefile  README.md  README.ru  cp_to_serv  files  fuzzyone.cbp
include/: Exception.h  FuzzyOne.h  Hedge.h  LVar.h  Term.h
include/fuzzyone/: Exception.h  LVar.h  Term.h
src/: FuzzyOne.cpp  Hedge.cpp  LVar.cpp  Term.cpp  fuzzyone.cpp  test.cpp
