cmake_minimum_required(VERSION 2.8)
project(fuzzyone)
set(SRC src/FuzzyOne.cpp  src/Hedge.cpp  src/LVar.cpp  src/Term.cpp)
set(INCLUDE_PATH "include/fuzzyone/")
set(HEADERS ${INCLUDE_PATH}Exception.h ${INCLUDE_PATH}FuzzyOne.h ${INCLUDE_PATH}Hedge.h ${INCLUDE_PATH}LVar.h ${INCLUDE_PATH}Term.h)
include_directories(${INCLUDE_PATH})
add_library(fuzzyone ${SRC} ${HEADERS})
install(TARGETS fuzzyone DESTINATION lib)
install(DIRECTORY include/fuzzyone DESTINATION include)
